Add fullbuild keyword

--- a/.ci-orchestrator/pb.yml
+++ b/.ci-orchestrator/pb.yml
@@ -67,9 +67,11 @@ triggers:
   description: "Runs an optimised Open Liberty Personal Pipeline, including building the IM and z/OS images, then running all FATs using the CI Orchestrator/Jenkins."
   triggerRank: 50
   groups: ["LibertyDev"]
-  keyword: "!fullpbbeta"
+  keyword: "!fullbuild"
   aliasKeywords:
     - "!fullpb"
+    - "!fullpbbeta"
+    - "#fullbuild"
     - "#fullpbbeta"
     - "#fullpb"
   propertyDefinitions:
