--- a/dev/ant_build.js/build.gradle
+++ b/dev/ant_build.js/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     library "org.webjars.npm:svg4everybody:2.1.9"
     library "org.webjars.npm:d3:3.5.10"
     library "org.eclipse.che.lib:che-orion-editor:6.19.0-20250520"
-    library "idx:idx:1.5.2.6@zip"
+    library "idx:idx:1.5.2.6_2@zip"
     library "manekinekko:dojo-doh-junit-report:master@zip"
     library "org.dojotoolkit:dojo:1.13.10@zip"
     library "org.webjars:gridx:1.3.9@zip"
@@ -137,7 +137,7 @@ def dependencyToPath = [
   "xerces:xercesImpl:2.12.2": "lib/cssValidator/lib/xercesImpl-2.12.2.jar",
   "xml-apis:xml-apis:1.4.01": "lib/cssValidator/lib/xml-apis-1.4.01.jar",
   "css-validator:css-validator:1.0.0": "lib/cssValidator/css-validator.jar",
-  "idx:idx:1.5.2.6": "lib/dojo/idx-1.5.2.6.zip",
+  "idx:idx:1.5.2.6_2": "lib/dojo/idx-1.5.2.6_2.zip",
   "org.dojotoolkit:dojo:1.13.10": "lib/dojo/dojo-1.13.10.zip",
   "org.webjars:gridx:1.3.9": "lib/dojo/gridx-1.3.9.zip",
   "rave:rave:1.8.0.12": "lib/dojo/rave-1.8.0.12.zip",
