--- a/dev/io.openliberty.springboot.fat40.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.app/build.gradle
@@ -28,6 +28,10 @@ apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
 
 dependencies {
   implementation('org.springframework.boot:spring-boot-starter-web')
+  implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+  implementation('org.webjars:bootstrap:5.3.7')
+  implementation('org.webjars:webjars-locator:0.52')
+  implementation('org.webjars:jquery:3.7.1')
 }
 
 bootJar {
