--- a/dev/com.ibm.ws.jpa.container.v32_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.jpa.container.v32_fat_tck/publish/tckRunner/tck/pom.xml
@@ -1,190 +1,195 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed under the Apache License, Version 2.0 (the "License"); you 
-    may not use this file except in compliance with the License. You may obtain 
-    a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless 
-    required by applicable law or agreed to in writing, software distributed 
-    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
-    OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
-    the specific language governing permissions and limitations under the License. -->
+<!-- 
+	~ Copyright (c) 2025 IBM Corporation and others. All rights reserved. 
+	~ This program and the accompanying materials are made available under the 
+	~ terms of the Eclipse Public License 2.0 which accompanies this distribution, 
+	~ and is available at 
+	~    http://www.eclipse.org/legal/epl-2.0/
+    
+    SPDX-License-Identifier: EPL-2.0 
+	~ Contributors: 
+	~    IBM Corporation - initial API and implementation 
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>io.openliberty.microprofile.faulttolerance</groupId>
+	<modelVersion>4.0.0</modelVersion>
+	
+	<groupId>io.openliberty.microprofile.faulttolerance</groupId>
     <artifactId>tck.runner.tck</artifactId>
     <version>4.0</version>
     <name>MicroProfile Fault Tolerance TCK Runner TCK Module</name>
+    
 
-    <properties>
+	<properties>
+		<targetDirectory>${project.basedir}/target</targetDirectory>
+		
         <jakarta-persistence-version>11.0.1</jakarta-persistence-version>
-
+		        <!-- Test Infrastructure versions -->
         <arquillian.version>1.7.0.Final</arquillian.version>
-        <junit-jupiter.version>5.7.2</junit-jupiter.version>
-        <arquillian.liberty.managed.jakarta.version>2.1.1</arquillian.liberty.managed.jakarta.version>
-        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
-        <testng.version>7.5.1</testng.version>
-        <slf4j.version>2.0.6</slf4j.version>
+        <arquillian.wlp.version>2.1.3</arquillian.wlp.version>
+        <arquillian.liberty.managed>2.1.3</arquillian.liberty.managed>
+        <junit.version>5.10.0</junit.version>
+        <sigtest.version>2.3</sigtest.version>
+	</properties>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${arquillian.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>${junit.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        
-        <!-- Overridden to 1.0 when running locally -->
-        <timeoutMultiplier>6.0</timeoutMultiplier>
-
-        <!--  the below is used in arquillian.xml -->
-        <wlp>${wlp}</wlp>
-        <defaultSuiteFiles>tck-suite.xml</defaultSuiteFiles>
-        <suiteXmlFile>${defaultSuiteFiles}</suiteXmlFile>
-        <targetDirectory>${project.basedir}/target</targetDirectory>
-    </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>${arquillian.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>            
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>${junit-jupiter.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <!-- Needed for ZOS. Defines the version of this artifact that arquillian-liberty-managed should use -->
-            <!-- This doesn't exist for JEE 9 so leaving it out for now, will have to see what happens on ZOS -->
-            <!-- <dependency>
-                <groupId>org.jboss.spec.javax.servlet</groupId>
-                <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-                <version>1.0.2.Final</version>
-            </dependency>-->
-        </dependencies>
-    </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.ibm.ws</groupId>
-            <artifactId>fattest.simplicity</artifactId>
-            <version>1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../../../lib/fattest.simplicity.jar</systemPath> <!-- This will point to build/libs/autoFVT/lib/fattest.simplicity.jar -->
-        </dependency>
-        <dependency>
-            <groupId>jakarta.tck</groupId>
-            <artifactId>persistence-platform-tck-tests</artifactId>
-            <version>${jakarta-persistence-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.enterprise</groupId>
-            <artifactId>jakarta.enterprise.cdi-api</artifactId>
-            <version>3.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.testng</groupId>
-            <artifactId>arquillian-testng-container</artifactId>
-            <version>${arquillian.version}</version>
-        </dependency>
-        <dependency>
+	<dependencies>
+		<!-- tck - data - external TCK -->
+		<dependency>
+			<groupId>jakarta.tck</groupId>
+			<artifactId>persistence-platform-tck-tests</artifactId>
+            		<version>${jakarta-persistence-version}</version>
+		</dependency>
+		<dependency>
+    <groupId>jakarta.tck.arquillian</groupId>
+    <artifactId>tck-porting-lib</artifactId>
+    <version>${jakarta-persistence-version}</version>
+</dependency>
+		<!-- test frameworks -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.tck</groupId>
+			<artifactId>sigtest-maven-plugin</artifactId>
+			<version>${sigtest.version}</version>
+		</dependency>
+		<!-- CDI for resource injection -->
+		<dependency>
+		    <groupId>org.jboss.weld.se</groupId>
+		    <artifactId>weld-se-core</artifactId>
+		    <version>5.1.0.Final</version>
+		    <scope>test</scope>
+		</dependency>
+		<!-- APIs referenced by TCK that do not require implementations for standalone tests -->
+		<dependency>
+			<groupId>org.jboss.shrinkwrap</groupId>
+			<artifactId>shrinkwrap-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.jboss.arquillian.junit5</groupId>
+		    <artifactId>arquillian-junit5-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>6.1</version>
+			<scope>system</scope>
+			<systemPath>${io.openliberty.jakarta.servlet.6.1}</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.enterprise</groupId>
+			<artifactId>jakarta.enterprise.cdi-api</artifactId>
+			<version>4.1</version>
+			<scope>system</scope>
+			<systemPath>${io.openliberty.jakarta.cdi.4.1}</systemPath>
+		</dependency>
+		        <dependency>
             <groupId>io.openliberty.arquillian</groupId>
-            <artifactId>arquillian-liberty-managed-jakarta</artifactId>
-            <version>${arquillian.liberty.managed.jakarta.version}</version>
+            <artifactId>arquillian-liberty-managed-jakarta-junit5</artifactId>
+            <version>${arquillian.liberty.managed}</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
-        <dependency>
-         <groupId>org.apache-extras.beanshell</groupId>
-         <artifactId>bsh</artifactId>
-         <version>2.0b6</version>
-       </dependency>  
-               <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+	</dependencies>
 
-    <build>
-        <directory>${targetDirectory}</directory>
-        <defaultGoal>clean test</defaultGoal>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.9</version>
-                <executions>
-                    <execution>
-                        <id>build-classpath</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>build-classpath</goal>
-                        </goals>
-                        <configuration>
-                            <!-- configure the plugin here -->
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                      <dependencies>
-        <dependency>
-          <groupId>org.junit.platform</groupId>
-          <artifactId>junit-platform-surefire-provider</artifactId>
-          <version>1.0.3</version>
-        </dependency>
-        <dependency>
-          <groupId>org.junit.jupiter</groupId>
-          <artifactId>junit-jupiter-engine</artifactId>
-          <version>5.0.3</version>
-        </dependency>
-      </dependencies>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>              
-                    <argLine>-Dfile.encoding=${project.build.sourceEncoding} -Dcom.ibm.tools.attach.enable=yes</argLine> <!-- Needed for ZOS. sourceEncoding is needed becuase arquillian calls string.getBtytes(). Attach is needed becuase because arquillian uses com.sun.tools.attach to find VMs -->
-                    <systemPropertyVariables>
-                        <wlp>${wlp}</wlp>
-                        <tck_server>${tck_server}</tck_server>
-                        <tck_port>${tck_port}</tck_port>
-                        <sun.rmi.transport.tcp.responseTimeout>${sun.rmi.transport.tcp.responseTimeout}</sun.rmi.transport.tcp.responseTimeout>
-                        <org.eclipse.microprofile.fault.tolerance.tck.timeout.multiplier>${timeoutMultiplier}</org.eclipse.microprofile.fault.tolerance.tck.timeout.multiplier>
-                    </systemPropertyVariables>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <testSourceDirectory>${basedir}${file.separarator}src${file.separarator}main${file.separarator}java${file.separarator}</testSourceDirectory>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<directory>${targetDirectory}</directory>
+		<pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.13.0</version>
+                    <configuration>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.5.3</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules> 
+                        <pushChanges>false</pushChanges>
+                        <localCheckout>true</localCheckout>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.4.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+		<plugins>
+			<!-- Plugin used to internal bundles to signaturedirectory for signature tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>copy-data</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<configuration>
+					<forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/> <!-- Default forkNode has encoding issues on ZOS -->
+					<trimStackTrace>false</trimStackTrace>
+					<failIfNoTests>true</failIfNoTests>
+					<dependenciesToScan>
+						<dependency>jakarta.tck:persistence-platform-tck-tests</dependency>
+					</dependenciesToScan>
+					<statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
+						<usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
+						<usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
+					</statelessTestsetReporter>
+					<systemPropertyVariables>
+						<java.util.logging.config.file>${logging.config.file}</java.util.logging.config.file>
+						<jimage.dir>${jimage.dir}</jimage.dir>
+						<!--<signature.sigTestClasspath>${project.build.directory}/signaturedirectory/jakarta.data-api.jar:${jimage.dir}/java.base:${jimage.dir}/java.rmi:${jimage.dir}/java.sql:${jimage.dir}/java.naming</signature.sigTestClasspath>-->
+						<jakarta.tck.skip.deployment>true</jakarta.tck.skip.deployment>
+						<jakarta.tck.database.type>${jakarta.tck.database.type}</jakarta.tck.database.type>
+						<jakarta.tck.database.name>${jakarta.tck.database.name}</jakarta.tck.database.name>
+					</systemPropertyVariables>
+					<excludes>
+						<exclude>${excluded.tests}</exclude>
+					</excludes>
+					<groups>${included.groups}</groups>
+					<reportNameSuffix>${jakarta.profile}-${jakarta.tck.database.type}</reportNameSuffix>
+					<testSourceDirectory>${basedir}${file.separarator}src${file.separarator}main${file.separarator}java${file.separarator}</testSourceDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
+
