Use gzip compression for exports

--- a/dev/io.openliberty.http.monitor_fat/publish/resources/META-INF/microprofile-config.properties
+++ b/dev/io.openliberty.http.monitor_fat/publish/resources/META-INF/microprofile-config.properties
@@ -3,3 +3,4 @@ otel.sdk.disabled=false
 otel.traces.exporter=none
 otel.logs.exporter=none
 otel.metric.export.interval=1000
+otel.exporter.otlp.compression=gzip
