--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -1707,6 +1707,11 @@
       <version>6.1.0</version>
     </dependency>
     <dependency>
+      <groupId>jakarta.tck.arquillian</groupId>
+      <artifactId>tck-porting-lib</artifactId>
+      <version>11.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>jakarta.transaction</groupId>
       <artifactId>jakarta.transaction-api</artifactId>
       <version>1.3.3</version>
@@ -3824,6 +3829,11 @@
     <dependency>
       <groupId>org.jboss.arquillian.core</groupId>
       <artifactId>arquillian-core-spi</artifactId>
+      <version>1.7.0.Alpha13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.arquillian.test</groupId>
+      <artifactId>arquillian-test-api</artifactId>
       <version>1.7.0.Alpha13</version>
     </dependency>
     <dependency>
