--- a/dev/cnf/resources/bnd/bundle.spring.props
+++ b/dev/cnf/resources/bnd/bundle.spring.props
@@ -45,6 +45,7 @@ springSecurityVersion30=strategy=exact;version=6.3.4
 
 springBootVersion40=version=latest
 springVersion40=version=latest
+springSecurityVersion40=version=latest
 
 checkpointSpringBootVersion30=strategy=exact;version=3.3.5
 checkpointSpringVersion30=strategy=exact;version=6.1.14
