--- a/dev/io.openliberty.springboot.fat40_fat/build.gradle
+++ b/dev/io.openliberty.springboot.fat40_fat/build.gradle
@@ -16,8 +16,48 @@ repositories {
   mavenCentral()
 }
 
+dependencies {
+  requiredLibs 'jakarta.websocket:jakarta.websocket-api:2.2.0',
+  'jakarta.websocket:jakarta.websocket-client-api:2.2.0',
+  'org.eclipse.jetty.websocket:websocket-jakarta-common:11.0.26',
+  'org.eclipse.jetty.websocket:websocket-jakarta-client:11.0.26',
+  'org.eclipse.jetty.websocket:websocket-core-common:11.0.26',
+  'org.eclipse.jetty.websocket:websocket-core-client:11.0.26',
+  'org.eclipse.jetty.websocket:websocket-jetty-api:11.0.26',
+  'org.eclipse.jetty.websocket:websocket-jetty-client:11.0.26',
+  'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
+  'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
+  'net.sourceforge.htmlunit:htmlunit:2.44.0',
+  'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+  'net.sourceforge.htmlunit:webdriver:2.6',
+  'org.apache.httpcomponents:httpmime:4.5.14', 
+  'org.brotli:dec:0.1.2',
+  'org.eclipse.birt.runtime:org.w3c.css.sac:1.3.1.v200903091627',
+  'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+  'xalan:xalan:2.7.2',
+  'xml-apis:xml-apis:1.4.01',
+  project(':com.ibm.ws.org.apache.commons.lang3'),
+  project(':com.ibm.ws.org.apache.commons.io'),
+  project(':com.ibm.ws.org.apache.httpcomponents'),
+  project(':com.ibm.ws.org.apache.commons.lang3'),
+  project(':io.openliberty.org.apache.commons.codec'),
+  project(':io.openliberty.org.apache.xercesImpl')
+  implementation 'org.eclipse.jetty:jetty-client:12.1.0'
+  implementation 'org.eclipse.jetty:jetty-io:12.1.0'
+  implementation 'org.eclipse.jetty:jetty-util:12.1.0'
+  implementation 'org.eclipse.jetty:jetty-http:12.1.0'
+}
+
 def appDefs =
-  [ [ 'io.openliberty.springboot.fat40.app', '.jar' ]]
+  [ [ 'io.openliberty.springboot.fat40.app', '.jar' ],
+    [ 'io.openliberty.springboot.fat40.war.app', '.war' ],
+    [ 'io.openliberty.springboot.fat40.actuator.app', '.jar' ],
+    [ 'io.openliberty.springboot.fat40.webflux.app', '.jar' ],
+    [ 'io.openliberty.springboot.fat40.java.app', '.jar' ],
+    [ 'io.openliberty.springboot.fat40.multicontext.app', '.jar' ],
+    [ 'io.openliberty.springboot.fat40.webanno.app', '.jar' ],
+    [ 'io.openliberty.springboot.fat40.websocket.app', '.war' ],
+    [ 'io.openliberty.springboot.fat40.security.app', '.jar' ]]
 
 autoFVT.dependsOn ':wlp.lib.extract:build'
 appDefs.each { appDef ->
