--- a/dev/io.openliberty.data.internal_fat_jpa_hibernate/build.gradle
+++ b/dev/io.openliberty.data.internal_fat_jpa_hibernate/build.gradle
@@ -157,7 +157,6 @@ task clearGeneratedSources() {
 }
 
 task addGeneratedSources() {
-    shouldRunAfter compileJava
     dependsOn clearGeneratedSources
     doLast {
       copy {
@@ -179,8 +178,8 @@ addRequiredLibraries.dependsOn addHibernateJPA32
 addRequiredLibraries.dependsOn addDerby16
 
 jar.dependsOn addHibernatePermissions
-jar.dependsOn addGeneratedSources
 
 compileJava {
+    finalizedBy addGeneratedSources
     options.compilerArgs << '-parameters'
-  }
+}
