Rename the mcp server feature
Rename from mcp-1.0 to mcpServer-1.0 since we may one day want to
provide a client MCP API.

--- a/dev/build.featureStart.base/resources/com/ibm/ws/test/featurestart/features/feature-levels.properties
+++ b/dev/build.featureStart.base/resources/com/ibm/ws/test/featurestart/features/feature-levels.properties
@@ -30,7 +30,7 @@ jsonbContainer-3.0=11
 jsonp-2.1=11
 jsonpContainer-2.1=11
 mail-2.1=11
-mcp-1.0=17
+mcpServer-1.0=17
 messaging-3.1=11
 microProfile-6.0=11
 microProfile-6.1=11
