Add test for overrideLibrary jdbc library

--- a/dev/com.ibm.ws.jdbc_fat/.classpath
+++ b/dev/com.ibm.ws.jdbc_fat/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="src" path="test-applications/dsdfat/src"/>
 	<classpathentry kind="src" path="test-applications/setupfat/src"/>
 	<classpathentry kind="src" path="test-applications/dsdfat_global_lib/src"/>
+	<classpathentry kind="src" path="test-applications/dsdfat_override_lib/src"/>
 	<classpathentry kind="src" path="test-resource/loginmodule/src"/>
 	<classpathentry exported="true" kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="bin"/>
