--- a/dev/com.ibm.ws.jpa.container.v32_fat_tck/publish/tckRunner/pom.xml
+++ b/dev/com.ibm.ws.jpa.container.v32_fat_tck/publish/tckRunner/pom.xml
@@ -17,14 +17,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.openliberty.microprofile.faulttolerance</groupId>
+    <groupId>com.ibm.ws.jpa.container.v32</groupId>
     <artifactId>tck.runner</artifactId>
     <version>4.0</version>
     <packaging>pom</packaging>
-    <name>MicroProfile Fault Tolerance 4.0 TCK Runner</name>
+    <name>jpa.container.v32 CDI integration TCK runner</name>
 
     <properties>
-        <arquillian.version>1.7.0.Alpha13</arquillian.version>
+        <arquillian.version>1.9.1.Final</arquillian.version>
+        <arquillian.liberty.managed.jakarta.version>2.1.3</arquillian.liberty.managed.jakarta.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -42,10 +43,16 @@
                 <version>3.0.0</version>
             </dependency>
             <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>${arquillian.version}</version>
-                <scope>import</scope>
+              <groupId>org.jboss.arquillian</groupId>
+              <artifactId>arquillian-bom</artifactId>
+              <version>${arquillian.version}</version>
+              <type>pom</type>
+              <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.jakarta</groupId>
+                <artifactId>arquillian-jakarta-bom</artifactId>
+                <version>10.0.0.Final</version>
                 <type>pom</type>
             </dependency>
         </dependencies>
