--- a/dev/com.ibm.ws.jpa.container.v32_fat_tck/build.gradle
+++ b/dev/com.ibm.ws.jpa.container.v32_fat_tck/build.gradle
@@ -11,3 +11,6 @@
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 
+addRequiredLibraries {
+  dependsOn addDerby
+}
