--- a/dev/com.ibm.ws.security.oidc.client_fat.spnego/build.gradle
+++ b/dev/com.ibm.ws.security.oidc.client_fat.spnego/build.gradle
@@ -41,7 +41,8 @@ dependencies {
                'org.apache.httpcomponents:httpclient:4.1.2',
                'org.apache.httpcomponents:httpcore:4.1.2',
                'org.apache.httpcomponents:httpmime:4.3.1',
-               'org.eclipse.birt.runtime.3_7_1:org.apache.xml.serializer:2.7.1'
+               'org.eclipse.birt.runtime.3_7_1:org.apache.xml.serializer:2.7.1',
+               'xml-apis:xml-apis:1.4.01'
 }
 
 configurations {
