--- a/dev/io.openliberty.mcp.internal_fat/build.gradle
+++ b/dev/io.openliberty.mcp.internal_fat/build.gradle
@@ -19,6 +19,7 @@ dependencies {
   requiredLibs 'org.json:json:20080701',
                'org.skyscreamer:jsonassert:2.0-rc1'
 }
+/* added below to allow for method parmaters to be available for MCP Tool Server*/
 compileJava {
     options.compilerArgs << '-parameters'
 }
