--- a/dev/io.openliberty.mpRestClient.4.0_fat/publish/servers/io.openliberty.mpRestClient.fat.asyncMultipartLocal/bootstrap.properties
+++ b/dev/io.openliberty.mpRestClient.4.0_fat/publish/servers/io.openliberty.mpRestClient.fat.asyncMultipartLocal/bootstrap.properties
@@ -1,2 +1,4 @@
+#com.ibm.ws.logging.trace.specification=*=info:RESTfulWS=all:org.jboss.resteasy.*=all:io.openliberty.org.jboss.*=all:io.openliberty.restfulWS.*=all:io.openliberty.microprofile.rest.client*=all
+#com.ibm.ws.logging.max.file.size=0
+
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=*=info:io.openliberty.mpRestClient.*=all:org.apache.cxf.jaxrs.provider.multipart.*=all
