Temporarily add injection and EJB trace for debug

--- a/dev/io.openliberty.data.internal_fat_datastore/publish/servers/io.openliberty.data.internal.fat.datastore/bootstrap.properties
+++ b/dev/io.openliberty.data.internal_fat_datastore/publish/servers/io.openliberty.data.internal.fat.datastore/bootstrap.properties
@@ -11,4 +11,4 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=*=info:data=all:persistenceService=all
+com.ibm.ws.logging.trace.specification=*=info:data=all:persistenceService=all:EJBContainer=all:Injection=all
