--- a/dev/com.ibm.ws.transaction.cloud_fat.base/build.gradle
+++ b/dev/com.ibm.ws.transaction.cloud_fat.base/build.gradle
@@ -41,6 +41,16 @@ autoFVT.doLast {
     into new File(autoFvtDir, 'publish/servers')
     include '**'
   }
+  copy {
+    from file('publish/0servers')
+    into new File(autoFvtDir, 'publish/servers')
+    include '**'
+  }
+  copy {
+    from file('publish/1servers')
+    into new File(autoFvtDir, 'publish/servers')
+    include '**'
+  }
 }
 
 addRequiredLibraries.dependsOn addDerbyToSharedDir
