Update fat projects to correct setting custom autoFVT work dependencies

--- a/dev/io.openliberty.microprofile.health.file.healthcheck.internal_fat/build.gradle
+++ b/dev/io.openliberty.microprofile.health.file.healthcheck.internal_fat/build.gradle
@@ -40,5 +40,5 @@ task addKafkaClientLibs (type: Copy) {
     shouldRunAfter autoFVT
 }
 
-zipAutoFVT.dependsOn addKafkaClientLibs
+customizeAutoFVT.dependsOn addKafkaClientLibs
 addRequiredLibraries.dependsOn copyTestContainers
