--- a/dev/com.ibm.ws.microprofile.health.2.0_fat/build.gradle
+++ b/dev/com.ibm.ws.microprofile.health.2.0_fat/build.gradle
@@ -45,5 +45,5 @@ task addKafkaClientLibs (type: Copy) {
     shouldRunAfter autoFVT
 }
 
-zipAutoFVT.dependsOn addKafkaClientLibs
+customizeAutoFVT.dependsOn addKafkaClientLibs
 addRequiredLibraries.dependsOn copyTestContainers
