--- a/dev/com.ibm.ws.webcontainer.security.jacc.1.5_fat/build.gradle
+++ b/dev/com.ibm.ws.webcontainer.security.jacc.1.5_fat/build.gradle
@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -385,7 +385,8 @@ assemble {
   dependsOn loginmethod_EAR
 }
 
-zipAutoFVT {
+customizeAutoFVT {
+  dependsOn autoFVT
   dependsOn basicauth_altVhost_WAR
   dependsOn basicauth_httpOnlyVhost_WAR
   dependsOn basicauth_httpsOnlyVhost_WAR
