--- a/dev/io.openliberty.microprofile.health.3.1.internal_fat/build.gradle
+++ b/dev/io.openliberty.microprofile.health.3.1.internal_fat/build.gradle
@@ -43,5 +43,5 @@ task addKafkaClientLibs (type: Copy) {
     shouldRunAfter autoFVT
 }
 
-zipAutoFVT.dependsOn addKafkaClientLibs
+customizeAutoFVT.dependsOn addKafkaClientLibs
 addRequiredLibraries.dependsOn copyTestContainers
