--- a/dev/com.ibm.ws.jdbc_fat_krb5/build.gradle
+++ b/dev/com.ibm.ws.jdbc_fat_krb5/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2024 IBM Corporation and others.
+ * Copyright (c) 2019, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -13,10 +13,14 @@
 
 configurations {
     oracle11 { transitive = false; }
+    db2Legacy
 }
 
 dependencies {
     oracle11 'com.oracle.database.jdbc:ojdbc11:23.4.0.24.05'
+    
+    // FIXME 11.5.9.0 12.1.0.0 and 12.1.2.0 have a regression that make kerberos authentication impossible
+    db2Legacy 'com.ibm.db2:jcc:11.5.7.0'
 }
 
 task addOracle11(type: Copy) {
@@ -26,10 +30,18 @@ task addOracle11(type: Copy) {
   rename 'ojdbc11.*.jar', 'ojdbc11.jar'
 }
 
+task addDb2Legacy(type: Copy) {
+    mustRunAfter jar
+    from configurations.db2Legacy
+    into new File(autoFvtDir, 'publish/shared/resources/jcc')
+    rename 'jcc.*.jar', 'jcc.jar'
+}
+
 
 addRequiredLibraries {
   dependsOn copyJdbcDrivers
   dependsOn addOracle11
+  dependsOn addDb2Legacy
   dependsOn addJakartaTransformer
   dependsOn copyTestContainers
 }
