Add Spring 4.0 support for transaction app

--- a/dev/io.openliberty.springboot.fat40_fat/build.gradle
+++ b/dev/io.openliberty.springboot.fat40_fat/build.gradle
@@ -10,6 +10,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+addRequiredLibraries.dependsOn addJakartaTransformer
 addRequiredLibraries.dependsOn addDerby
 addRequiredLibraries.dependsOn copyJdbcDrivers
 addRequiredLibraries.dependsOn copyTestContainers
@@ -89,7 +90,8 @@ def appDefs =
     [ 'io.openliberty.springboot.fat40.security.app', '.jar' ],
     [ 'io.openliberty.springboot.fat40.concurrency.app', '.war'],
     [ 'io.openliberty.springboot.fat40.mbean.app', '.war'],
-    [ 'io.openliberty.springboot.fat40.jms.app', '.war']]
+    [ 'io.openliberty.springboot.fat40.jms.app', '.war'],
+    [ 'io.openliberty.springboot.fat40.transactions.app', '.war']]
 
 autoFVT.dependsOn ':wlp.lib.extract:build'
 appDefs.each { appDef ->
