--- a/dev/com.ibm.ws.springboot.fat20_fat/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20_fat/build.gradle
@@ -66,6 +66,7 @@ def appDefs =
     [ 'com.ibm.ws.springboot.fat20.webflux.app', '.jar' ],
     [ 'com.ibm.ws.springboot.fat20.multicontext.app', '.jar' ],
     [ 'com.ibm.ws.springboot.fat20.transactions.app', '.war' ],
+    [ 'com.ibm.ws.springboot.fat20.programmatic.trans.app', '.war' ],
     [ 'com.ibm.ws.springboot.fat20.jms.app', '.war' ],
     [ 'com.ibm.ws.springboot.fat20.data.app', '.war' ],
     [ 'com.ibm.ws.springboot.fat20.concurrency.app', '.war' ],
