--- a/.ci-orchestrator/externalIssueNotice.yml
+++ b/.ci-orchestrator/externalIssueNotice.yml
@@ -11,7 +11,7 @@ triggers:
   - property: action
     include: labeled
   - property: repo
-    include: OpenLiberty/open-liberty
+    include: open-liberty
   - property: labels
     include: "Opened by external contributor"
   - property: labels
