--- a/dev/io.openliberty.mcp.internal_fat/build.gradle
+++ b/dev/io.openliberty.mcp.internal_fat/build.gradle
@@ -36,6 +36,7 @@ sourceSets {
 			srcDirs = ['noParamTest']
 		}
 		compileClasspath += sourceSets.main.compileClasspath
+		runtimeClasspath += sourceSets.main.runtimeClasspath + output
 	}
 }
 
