Rename illigal args to missing args, rename source set for consistency, review comments review comment to make names consistent Co-authored-by: Andrew Rouse <anrouse@uk.ibm.com>

--- a/dev/io.openliberty.mcp.internal_fat/.classpath
+++ b/dev/io.openliberty.mcp.internal_fat/.classpath
@@ -5,7 +5,7 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="noParamTest">
+	<classpathentry kind="src" path="noParamNames">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
